* fix slot location